Bug 1180415 - Initialize downloadable font pattern from FTFace. r=karlt, a=ritu